--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,9 @@ dependencies = [
     "rich>=13.0",
     "pydantic>=2.0",
     "websockets>=12.0",
+    "fastapi>=0.100.0",
+    "uvicorn>=0.23.0",
+    "pyyaml>=6.0",
 ]
 
 [project.optional-dependencies]
